Updated the project to display version 1.0.0 and that the removal amount is an estimate.

--- a/OVCleaner.csproj
+++ b/OVCleaner.csproj
@@ -6,6 +6,8 @@
     <Nullable>disable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Version>1.0.0</Version>
+    <Description>OV Cleaner removes old version of Kit Apps installed</Description>
   </PropertyGroup>
 
   <ItemGroup>
