--- a/OVCleaner.csproj
+++ b/OVCleaner.csproj
@@ -8,7 +8,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Version>1.0.0</Version>
     <Description>OV Cleaner removes old version of Kit Apps installed</Description>
+    <ApplicationIcon>TheWolfIcon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="TheWolfIcon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="DataJuggler.Win.Controls" Version="6.2.4" />
